--- a/index.html
+++ b/index.html
@@ -9,12 +9,30 @@
 </head>
 <body class="main">
     <div class="heading">
-        <h1>The Library app</h1>
+        <h1>The library app</h1>
+        <button id="new-book">New book</button>
     </div>
     <div class="book-list">
         <h2 class="list-heading">Books</h2>
         <ul class="list"></ul>
     </div>
+    <form class="book-form">
+        <label for="title">Title</label>
+        <input type="text" id="title" name="title">
+        <label for="author">Author</label>
+        <input type="text" id="author" name="author">
+        <label for="pages">No. pages</label>
+        <input type="number" id="pages" name="pages">
+        <p>Have you read the book?</p>
+        <div>
+            <label for="yes">Yes</label>
+            <input type="radio" id="yes" name="read" value="yes">
+            <label for="no">No</label>
+            <input type="radio" id="no" name="read" value="no">
+        </div>
+        <button type="submit">Submit</button>
+    </form>
+    <div id="overlay">Overlay</div>
     <script src="scripts.js" defer></script>    
 </body>
 </html>
