Additional JS work

--- a/index.html
+++ b/index.html
@@ -22,21 +22,6 @@
                 <th class="table-heading">Toggle read status</th>
                 <th class="table-heading">Delete book</th>
             </tr>
-            <tr>
-                <td>The Hobbit</td>
-                <td>J.R.R Tolkien</td>
-                <td>310</td>
-                <td>No</td>
-                <td>
-                    <label for="read">Read</label>
-                    <input type="radio" id="read" name="read-status" value="read">
-                    <label for="not-read">Not read</label>
-                    <input type="radio" id="not-read" name="read-status" value="not-read">
-                </td>
-                <td>
-                    <button class="delete-button">Delete book</button>
-                </td>
-            </tr>
         </table>
      </div>
     <div class="overlay">
@@ -53,10 +38,10 @@
             <input class="text-input" type="number" id="pages" name="pages">
             <p>Have you read the book?</p>
             <div>
-                <label for="yes">Yes</label>
-                <input type="radio" id="yes" name="read" value="yes">
-                <label for="no">No</label>
-                <input type="radio" id="no" name="read" value="no">
+                <label for="yes-read">Yes</label>
+                <input type="radio" id="yes-read" name="read" value="Yes">
+                <label for="no-read">No</label>
+                <input type="radio" id="no-read" name="read" value="No">
             </div>
             <div class="submit-container">    
                 <button class="submit">Submit</button>
